<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:id="@+id/fragment_place"
        android:orientation="vertical" >

        <!--<fragment
            android:id="@+id/fragment_place"
            android:name="com.spectrus.chemport.LessonFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />-->

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="0"
        android:gravity="center"
        android:background="@drawable/menu_banner_bottom_000"
        android:orientation="vertical" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="78dp"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/button_00"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:gravity="bottom|center"
                android:paddingBottom="15dp"
                android:onClick="onLessons"
                android:textSize="18sp"
                android:text="@string/frag_000"/>

            <Button
                android:id="@+id/button_01"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:gravity="bottom|center"
                android:paddingBottom="15dp"
                android:onClick="onActivities"
                android:textSize="18sp"
                android:text="@string/frag_001" />

            <Button
                android:id="@+id/button_02"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:gravity="bottom|center"
                android:paddingBottom="15dp"
                android:onClick="onIndex"
                android:textSize="18sp"
                android:text="@string/frag_002" />

            <Button
                android:id="@+id/button_03"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:gravity="bottom|center"
                android:paddingBottom="15dp"
                android:onClick="onOptions"
                android:textSize="18sp"
                android:text="@string/frag_003" />

        </TableRow>

    </LinearLayout>

</LinearLayout>
